--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ cloudinary.name=${CLOUDINARY_NAME}
 cloudinary.apikey=${CLOUDINARY_APIKEY}
 cloudinary.secret=${CLOUDINARY_SECRET}
 mail.from=${MAIL_FROM}
-spring.jwt.secret=${SECRET_JWT}
+spring.jwt.secret=${JWT_SECRET}
